--- a/alex-d-dynamodb-tutor/package.json
+++ b/alex-d-dynamodb-tutor/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.670.0",
+    "@aws-sdk/lib-dynamodb": "^3.679.0",
     "alex-d-dynamodb-tutor": "file:"
   }
 }
